# Workshops-FAST

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
fast/: __init__.py  analisador_de_presenca.py
tests/: test_analisador_de_presenca.py
